# DICOMViewer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ReadMe.txt  create_msvc10_project.bat  win32_msvc10_build.bat
misc/: DICOMViewer.bat.in
misc/CMake-Modules/: FindFlann.cmake
misc/MediTEC/: CMakeLists.txt
res/: ComParamPolaris_skeleton.ini  Default Absorption Color Map.xml  Default MIP Color Map.xml  Solid Demo Color Map 01.XML  Specular Light Demo Color Map.XML
src/: BinaryDumpExportDialog.cpp  BinaryDumpExportDialog.h  BinaryDumpImportDialog.cpp  BinaryDumpImportDialog.h  BinaryDumpProcessor.cpp  BinaryDumpProcessor.h  BinaryVolumeMask.h  CarnaContext.h  CarnaContextClient.h  CarnaContextProvider.cpp  CarnaContextProvider.h  CarnaModelFactory.cpp  CarnaModelFactory.h  ClippedVolumeMask.cpp  ClippedVolumeMask.h  Component.cpp  Component.h  ComponentEmbeddable.cpp  ComponentEmbeddable.h  ComponentIcons.qrc  ComponentLauncher.cpp  ComponentLauncher.h  Components.h  ComponentsClient.h  ComponentsProvider.cpp  ComponentsProvider.h  DataSize.h  Differential.cpp  Differential.h  Dijkstra.h  EmbedArea.cpp  EmbedArea.h  EmbedAreaArray.cpp  EmbedAreaArray.h  EmbedManager.cpp  EmbedManager.h  Embeddable.cpp  Embeddable.h  EmbeddablePlacer.cpp  EmbeddablePlacer.h  (+156 more)
src/doc/: Doxyfile  Doxyfile.in  customdoxygen.css  doc.dox
src/res/: point-cloud.frag  point-cloud.vert
